# ROS_homework

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_homework_turret.yaml
meshes/: base.STL  cannon.STL  lid.STL  stand.STL
scripts/: listener.py  talker.py  talker.py.save  talker.py.save.1
urdf/: homework_turret.urdf
